--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-    <title>Quasar App</title>
-    <link rel="shortcut icon" type="image/x-icon" href="statics/favicon.ico">
+    <title>ArumaRoom</title>
   </head>
   <body>
     <div id="q-app"></div>
